@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2016 Andreas Maschke
+  Copyright (C) 1995-2023 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -87,6 +87,7 @@ public class BatchFlameRendererFrame extends JFrame {
     this.setVisible(false);
     this.setResizable(true);
     this.setContentPane(getJContentPane());
+    this.pack();
   }
 
   /**
