@@ -1,6 +1,6 @@
 /*
   JWildfire - an image and animation processor written in Java 
-  Copyright (C) 1995-2021 Andreas Maschke
+  Copyright (C) 1995-2023 Andreas Maschke
 
   This is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser 
   General Public License as published by the Free Software Foundation; either version 2.1 of the 
@@ -405,8 +405,6 @@ public class JWildfire extends JApplet {
     new Thread(resizeRefreshFlameImageThread).start();
   }
 
-
-  private BufferedImage backgroundImage;
 
   @SuppressWarnings("unchecked")
   public <T extends JFrame> JFrameHolder<T> getJFrameHolder(Class<T> frameType) {
