@@ -15,6 +15,7 @@ V8.xx (xx.xx.2023)
  -removed the parameter "scale_t" of "heart_wf" which was never used
  -changed the labels of the checkboxes inside the profile-dialogs to be also visible when the controls are inactive
  -fixed a problem with the undo-manager which caused the undo-button be inactive even if they where undo-steps available
+ -fixed a problem where sending a flame to the batch-renderer did not cause to render the preview
 
 V8.00 (19.02.2023)
  - huge improvements in solid rendering, hence the big change in version number:
